<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="180dp"
    android:layout_gravity="bottom"
    android:paddingRight="20dp"
    android:paddingLeft="20dp"
    android:background="@color/bottom_layout_bg_color">


    <LinearLayout
        android:id="@+id/bottom_lin0"
        style="@style/bottom_bar_lin_style"
        android:nextFocusLeft="@+id/bottom_lin5"
        android:orientation="vertical">

        <ImageView
            style="@style/bottom_item_image_style"
            android:src="@drawable/abottom_settings" />

        <TextView
            style="@style/category_text_style"
            android:text="@string/bottom_setting" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/bottom_lin1"
        style="@style/bottom_bar_lin_style"
        android:orientation="vertical">

        <ImageView
            android:padding="10dp"
            style="@style/bottom_item_image_style"
            android:src="@drawable/bottom_tools" />

        <TextView
            style="@style/category_text_style"
            android:text="@string/bottom_tools" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/bottom_lin2"
        style="@style/bottom_bar_lin_style"
        android:orientation="vertical">

        <ImageView
            style="@style/bottom_item_image_style"
            android:src="@drawable/abottom_tv" />

        <TextView
            style="@style/category_text_style"
            android:text="@string/bottom_tv" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/bottom_lin3"
        style="@style/bottom_bar_lin_style"
        android:orientation="vertical">

        <ImageView
            style="@style/bottom_item_image_style"
            android:src="@drawable/abottom_enjoy" />

        <TextView
            style="@style/category_text_style"
            android:text="@string/bottom_amusement" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/bottom_lin4"
        style="@style/bottom_bar_lin_style"
        android:orientation="vertical">

        <ImageView
            style="@style/bottom_item_image_style"
            android:src="@drawable/a_bottom_vip" />

        <TextView
            style="@style/category_text_style"
            android:text="@string/bottom_vip_area" />
    </LinearLayout>

    <FrameLayout
        android:id="@+id/bottom_lin5"
        style="@style/bottom_bar_lin_style"
        android:nextFocusRight="@+id/bottom_lin0"
       >

        <ImageView
            android:layout_gravity="center"
            android:layout_marginTop="-25dp"
            style="@style/bottom_item_image_style"
            android:src="@drawable/a18" />

        <TextView
            style="@style/category_text_style"
            android:layout_gravity="bottom"
            android:layout_marginBottom="20dp"
            android:text="IBiza" />
        <ImageView
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="20dp"
            android:layout_gravity="bottom"
            android:src="@drawable/zza"
            android:layout_width="60dp"
            android:layout_height="60dp" />
    </FrameLayout>

    <!-- 最顶层边框 -->

    <com.zxy.wtlauncher.widget.MainUpView
        android:id="@+id/bottom_mainUpView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
         />


</LinearLayout>
