<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ider="http://schemas.android.com/apk/res/com.zxy.wtlauncher"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgmain"
    tools:context=".MainActivity" >
    <RelativeLayout 
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_marginTop="90dp"
        android:layout_marginLeft="120dp"
        android:orientation="horizontal"
        >
        <ImageView 
            android:id="@+id/bt_apps"
            android:layout_height="75dp"
            android:layout_width="75dp"
            android:src="@drawable/apps_icon"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:onClick="OniconClick"
            />
        
         <ImageView 
             android:id="@+id/bt_setting"
             android:layout_height="75dp"
            android:layout_width="75dp"
            android:layout_marginLeft="60dp"
            android:src="@drawable/setting_icon"
             android:focusable="true"
            android:focusableInTouchMode="true"
            android:onClick="OniconClick"
            />
         <ImageView 
             android:id="@+id/bt_clean"
             android:layout_height="75dp"
            android:layout_width="75dp"
            android:layout_marginLeft="120dp"
            android:src="@drawable/clean_icon"
             android:focusable="true"
            android:focusableInTouchMode="true"
            android:onClick="OniconClick"
            />

    </RelativeLayout>
    
    <RelativeLayout 
        android:id="@+id/status_rela"
        android:layout_width="190dp"
        android:layout_height="100dp"
        android:layout_marginTop="90dp"
        android:layout_marginLeft="920dp"
        android:orientation="horizontal"
        >
        <ImageView 
            android:id="@+id/net_icon"
            android:layout_height="75dp"
            android:layout_width="75dp"
            android:src="@drawable/icon_neterror"
            android:focusable="false"
            android:focusableInTouchMode="false"
            />
        
         <ImageView 
             android:id="@+id/tf_icon"
             android:layout_height="75dp"
            android:layout_width="75dp"
            android:layout_marginLeft="60dp"
            android:src="@drawable/icon_sdcard_false"
             android:focusable="false"
            android:focusableInTouchMode="false"
            />
         <ImageView 
             android:id="@+id/usb_icon"
             android:layout_height="75dp"
            android:layout_width="75dp"
            android:layout_marginLeft="120dp"
            android:src="@drawable/icon_usb_false"
             android:focusable="false"
            android:focusableInTouchMode="false"
            />
    </RelativeLayout>
    <TextClock 
        android:id="@+id/time_tc"
        android:layout_toRightOf="@+id/status_rela"
        android:layout_marginLeft="5dp"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginTop="90dp"
        android:textSize="40sp"
        />
    
    <TextClock
        android:id="@+id/tc_date"
        android:layout_toRightOf="@+id/status_rela"
        android:layout_below="@+id/time_tc"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:textSize="20sp"
        />
<com.zxy.wtlauncher.view.TvRelativeLayoutAsGroup 
    android:id="@+id/launcher_items"
    android:layout_width="1068dp"
    android:layout_height="448dp"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="180dp"
    android:clipToPadding="false"
    android:paddingTop="20dp"
    android:paddingLeft="10dp"
    ider:animationType="TRANSLATE"
    ider:durationTranslate="1"
    ider:boarderInt="15"
    ider:scale="1.1"
    ider:cursorRes="@drawable/flyimg"
    >
    <com.zxy.wtlauncher.view.LauncherItem
        android:id="@+id/launcher_item1"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="8dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:tag="1"
        />
    
    <com.zxy.wtlauncher.view.LauncherItem
        android:id="@+id/launcher_item2"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_toRightOf="@+id/launcher_item1"
        android:layout_marginLeft="8dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:tag="2"
        />
    
    <com.zxy.wtlauncher.view.LauncherItem
        android:id="@+id/launcher_item3"
        android:layout_width="200dp" 
        android:layout_height="200dp"
        android:layout_toRightOf="@+id/launcher_item2"
        android:layout_marginLeft="8dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:tag="3"
        />
    
    
    <com.zxy.wtlauncher.view.LauncherItem
        android:id="@+id/launcher_item4"
        android:layout_width="200dp" 
        android:layout_height="200dp"
        android:layout_toRightOf="@+id/launcher_item3"
        android:layout_marginLeft="8dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:tag="4"
        />
    
    
    <com.zxy.wtlauncher.view.LauncherItem
        android:id="@+id/launcher_item5"
        android:layout_width="200dp" 
        android:layout_height="200dp"
        android:layout_toRightOf="@+id/launcher_item4"
        android:layout_marginLeft="8dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:tag="5"
        />
    <!-- two -->
      <com.zxy.wtlauncher.view.LauncherItem
        android:id="@+id/launcher_item6"
        android:layout_width="200dp" 
        android:layout_height="200dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_below="@+id/launcher_item1"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:tag="6"
        />
    
    <com.zxy.wtlauncher.view.LauncherItem
        android:id="@+id/launcher_item7"
        android:layout_width="200dp" 
        android:layout_height="200dp"
        android:layout_toRightOf="@+id/launcher_item6"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_below="@+id/launcher_item2"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:tag="7"
        />
    
    <com.zxy.wtlauncher.view.LauncherItem
        android:id="@+id/launcher_item8"
        android:layout_width="200dp" 
        android:layout_height="200dp"
        android:layout_toRightOf="@+id/launcher_item7"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_below="@+id/launcher_item3"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:tag="8"
        />
    
    
    <com.zxy.wtlauncher.view.LauncherItem
        android:id="@+id/launcher_item9"
        android:layout_width="200dp" 
        android:layout_height="200dp"
        android:layout_toRightOf="@+id/launcher_item8"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_below="@+id/launcher_item4"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:tag="9"
        />
    
    
    <com.zxy.wtlauncher.view.LauncherItem
        android:id="@+id/launcher_item10"
        android:layout_width="200dp" 
        android:layout_height="200dp"
        android:layout_toRightOf="@+id/launcher_item9"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_below="@+id/launcher_item5"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:tag="10"
        />
    
</com.zxy.wtlauncher.view.TvRelativeLayoutAsGroup>

    <com.zxy.wtlauncher.view.TvRelativeLayoutAsGroup
        android:id="@+id/launcher_itemsb"
        android:layout_width="1068dp"
        android:layout_height="448dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="180dp"
        android:clipToPadding="false"
        android:paddingTop="20dp"
        android:paddingLeft="10dp"
        ider:animationType="TRANSLATE"
        ider:durationTranslate="1"
        ider:boarderInt="15"
        ider:scale="1.1"
        ider:cursorRes="@drawable/flyimg"
        >
    <com.zxy.wtlauncher.view.LauncherItem
        android:id="@+id/launcher_item_b1"
        android:layout_width="410dp"
        android:layout_height="410dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="78dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:tag="11"
        />

    <com.zxy.wtlauncher.view.LauncherItem
        android:id="@+id/launcher_item_b2"
        android:layout_width="410dp"
        android:layout_height="410dp"
        android:layout_toRightOf="@+id/launcher_item_b1"
        android:layout_marginLeft="28dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:tag="12"
        />
    </com.zxy.wtlauncher.view.TvRelativeLayoutAsGroup>
    <LinearLayout
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="30dp"
        android:gravity="center">
        <com.zxy.wtlauncher.view.MyText
            android:id="@+id/movie_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="30sp"
            android:focusable="true"
            android:textColor="#deeeff"
            android:text="@string/movie"
            android:nextFocusLeft="@+id/adult_text"
            android:background="@drawable/mode_back"/>
        <com.zxy.wtlauncher.view.MyText
            android:id="@+id/adult_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="30sp"
            android:focusable="true"
            android:textColor="#deeeff"
            android:text="@string/adult"
            android:nextFocusRight="@+id/movie_text"
            android:background="@drawable/mode_back"/>
    </LinearLayout>
    <com.zxy.wtlauncher.view.TvMarqueeText
        android:id="@+id/mt_tip"
        android:layout_width="@dimen/px500"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:textSize="@dimen/px60"
        android:visibility="gone"
        android:textColor="@color/white"
        ider:period="10"
        ider:text="@string/tip_app"
        ider:vague="true"
        />
    <com.zxy.wtlauncher.view.TvMarqueeText
        android:id="@+id/address_tip"
        android:layout_width="@dimen/px500"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:textSize="@dimen/px60"
        android:textColor="@color/white"
        ider:period="10"
        ider:text="@string/address_tip"
        ider:vague="true"
        />
 

</RelativeLayout>
